# monspell-win

./: .gitignore  CONTRIBUTING.md  install-monspell.iss
Spellers/: mn.bhfst
docs/: fork-divergence.md
mso/: Cargo.toml  build.rs  monspell_mso.def
mso/src/: lib.rs
src/: speller_repository.rs
src/spell_impl/: EnumSpellingError.rs
