[package]
name = "monspell-mso"
description = "Office Custom Proofing Tool (CSAPI) say-yes stub for monspell. Unlocks Word's language gate so WSCAPI (windivvun.dll) handles actual spell-check."
version = "0.1.0-beta"
authors = ["abadrangui <abadrangui@gmail.com>"]
license = "GPL-3.0"
edition = "2018"

[lib]
name = "monspell_mso"
crate-type = ["cdylib"]

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = "symbols"
